program-libs/zero-copy-derive/tests/ui/fail/01_empty_struct.stderr
error: ZeroCopy only supports structs with named fields
 --> tests/ui/fail/01_empty_struct.rs:5:10
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `ZeroCopy` (in Nightly builds, run with -Z macro-backtrace for more info)

error: ZeroCopy only supports structs with named fields
 --> tests/ui/fail/01_empty_struct.rs:5:20
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |                    ^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `ZeroCopyMut` (in Nightly builds, run with -Z macro-backtrace for more info)
